syntax = 'proto3';

package net.tjalp.peach.proto.apple;

import "google/protobuf/empty.proto";

message AppleHealthReport {

}

message AppleHandshakeRequest {
    string node_identifier = 1;
    int32 port = 2;
}

message AppleHandshakeResponse {

}

service AppleService {

    rpc HealthStatus (stream AppleHealthReport) returns (google.protobuf.Empty);

    rpc AppleHandshake (AppleHandshakeRequest) returns (AppleHandshakeResponse);
}